--- a/index.ejs
+++ b/index.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
+   <link rel="icon" type="image/svg+xml" href="/images/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Real-Time-Tracking</title>
 
@@ -9,10 +11,10 @@
   <link rel="stylesheet" href="/css/style.css" />
 
   <!-- Leaflet CSS -->
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.css"
-        crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.9.4/leaflet.min.css"
+    crossorigin="anonymous" />
 </head>
+
 <body>
   <div id="map" style="height: 100vh;"></div>
 
@@ -25,4 +27,5 @@
   <!-- Your main client JS file -->
   <script src="/js/script.js"></script>
 </body>
+
 </html>
